--- a/docs/15、同时启动多台 EC2 实例.md
+++ b/docs/15、同时启动多台 EC2 实例.md
@@ -29,7 +29,7 @@
 
 *ec2-aws_ami.tf*
 
-```bash
+```terraform
 data "aws_ami" "myami" {
   # 最新使用
   most_recent = true
@@ -54,7 +54,7 @@ data "aws_ami" "myami" {
 
 *ec2-sg.tf*
 
-```bash
+```terraform
 # Create Security Group
 resource "aws_security_group" "learnaws-sg-web-ssh" {
   # 安全组的名称
@@ -102,7 +102,7 @@ resource "aws_security_group" "learnaws-sg-web-ssh" {
 
 *ec2-variables.tf*
 
-```bash
+```terraform
 # AWS Region
 variable "aws_region" {
   description = "AWS Region"
@@ -125,7 +125,7 @@ variable "instance_type_env" {
 
 *ec2.tf*
 
-```bash
+```terraform
 ###########################################################
 # EC2 资源设置
 resource "aws_instance" "myweb_server2" {
@@ -147,7 +147,7 @@ resource "aws_instance" "myweb_server2" {
 
 *main.tf*
 
-```bash
+```terraform
 ###########################################################
 # Terraform 基本设置
 terraform {
@@ -172,7 +172,7 @@ provider "aws" {
 
 *ec2-outputs.tf*
 
-```bash
+```terraform
 output "instance_instance_type" {
   # EC2 实例类型，因为所有的EC2都是一样的，取第一个输出即可
   value = aws_instance.myweb_server2[0].instance_type
