--- a/docs/4、快速建立第一个 EC2 实例 - 本地授权方式.md
+++ b/docs/4、快速建立第一个 EC2 实例 - 本地授权方式.md
@@ -33,7 +33,7 @@ $ vim main.tf
 
 *main.tf*
 
-```bash
+```terraform
 ###########################################################
 # Terraform 基本设置
 terraform {
