--- a/docs/9、定义引用变量.md
+++ b/docs/9、定义引用变量.md
@@ -33,7 +33,7 @@ https://www.terraform.io/language/values
 
 *ec2-variables.tf*
 
-```bash
+```terraform
 # AWS Region
 variable "aws_region" {
   description = "AWS Region"
@@ -60,7 +60,7 @@ variable "ami_id" {
 
 *main.tf*
 
-```bash
+```terraform
 ###########################################################
 # Terraform 基本设置
 terraform {
@@ -84,7 +84,7 @@ provider "aws" {
 
 *ec2.tf*
 
-```bash
+```terraform
 ###########################################################
 # EC2 资源设置
 resource "aws_instance" "myweb_server" {
